namespace DriverAndVehicleLicenseDepartment;

public class Payments {}